--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.3.0",
     "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.2"
+    "sharp": "^0.32.2",
+    "sharp-multer": "^0.3.0"
   }
 }
